# Rust_Adventures

./: .gitignore  Cargo.toml  Learning Rust!.code-workspace  README.md  clippy.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/aggregator/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/aggregator/src/: lib.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/all-in-one/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/all-in-one/src/: main.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/generic-enum/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/generic-largest/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/generic-largest/src/: main.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/generic-struct/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/generic-struct/src/: main.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/generics/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/generics/src/: main.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/largest/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/largest/src/: main.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/lifetimes/: Cargo.toml
Chapter 10 - Generic Types, Traits, and Lifetimes/lifetimes/src/: main.rs
Chapter 10 - Generic Types, Traits, and Lifetimes/mixup/: Cargo.toml
Chapter 11 - Writing Automated Tests/adder/: Cargo.toml
Chapter 11 - Writing Automated Tests/greeting/: Cargo.toml
Chapter 12 - An IO Project: Building a Command Line Program/minigrep/: Cargo.toml
Chapter 2 - Programming a Guessing Game/guessing_game/: Cargo.toml
Chapter 3 - Common Programming Concepts/variables/: Cargo.toml
Chapter 5 - Using Structs to Structure Related Data/field/: Cargo.toml
Chapter 5 - Using Structs to Structure Related Data/rectangles/: Cargo.toml
Chapter 6 - Enums and Pattern Matching/enums/: Cargo.toml
Chapter 7 - Managing Growing Projects with Packages, Crates, and Modules/my-project/: Cargo.toml
Chapter 7 - Managing Growing Projects with Packages, Crates, and Modules/restaurant/: Cargo.toml
Chapter 8 - Common Collections/averages/: Cargo.toml
Chapter 8 - Common Collections/collections/: Cargo.toml
Chapter 8 - Common Collections/hashmaps/: Cargo.toml
Chapter 8 - Common Collections/pig-latin/: Cargo.toml
Chapter 8 - Common Collections/strings/: Cargo.toml
Chapter 9 - Error Handling/closures/: Cargo.toml
Chapter 9 - Error Handling/error-handling/: Cargo.toml
Chapter 9 - Error Handling/guessing_gamev2/: Cargo.toml
Common Programming Concepts/calculate_length/: Cargo.toml
Common Programming Concepts/loops/: Cargo.toml
Getting Started/hello_world/: hello_world
Understanding Owneship/slice/: Cargo.toml
branches/: Cargo.toml
branches/src/: main.rs
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
loops/src/: main.rs
ownership_and_funcs/: Cargo.toml
ownership_and_funcs/src/: main.rs
scopes/: Cargo.toml
variables/src/: main.rs
(+32 files in other folders)
